RESOLVED FIXED26683
Fix Chromium build bustage: Add custom binding for HTMLDataGridElement.dataSource
https://bugs.webkit.org/show_bug.cgi?id=26683
Summary Fix Chromium build bustage: Add custom binding for HTMLDataGridElement.dataSo...
Darin Fisher (:fishd, Google)
Reported 2009-06-24 09:40:48 PDT
Fix Chromium build bustage: Add custom binding for HTMLDataGridElement.dataSource Bustage caused by this change: http://trac.webkit.org/changeset/45018
Attachments
v1 patch (3.67 KB, patch)
2009-06-24 09:42 PDT, Darin Fisher (:fishd, Google)
levin: review+
Darin Fisher (:fishd, Google)
Comment 1 2009-06-24 09:42:45 PDT
Created attachment 31789 [details] v1 patch
Darin Fisher (:fishd, Google)
Comment 2 2009-06-24 09:49:09 PDT
Note You need to log in before you can comment on or make changes to this bug.